# target-wayfair

./: .gitignore  README.md  pyproject.toml  ruff.toml
sample_payload/: valid_product.singer
target_wayfair/: auth.py  client.py  sinks.py  target.py
target_wayfair/tests/: test_core.py
