[tool.poetry]
name = "target-wayfair"
version = "0.0.1"
description = "`target-wayfair` is a Singer target for Wayfair, built with the Hotglue Singer SDK for Singer Targets."
authors = ["hotglue"]
keywords = [
    "ELT",
    "Wayfair",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
hotglue-singer-sdk = "^1.0.1"
hotglue-etl-exceptions = "0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "target_wayfair"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
target-wayfair = 'target_wayfair.target:TargetWayfair.cli'
